Added _ properly to Object, and removed deferring to prototype
- Always a constant value referencing the object itself
- This is propagated into any ThFunction member of an object
- Objects also no longer defer to their prototype; all variable
references are copied on creation
- Reference copy is shallow: changing B.v will change A.v in prototype A
of B